--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "this is an open ai chat app for slack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.12.2",
     "dotenv": "^16.0.3",
-    "openai": "^3.1.0"
+    "express": "^4.18.2",
+    "netlify-lambda": "^2.0.15",
+    "openai": "^3.1.0",
+    "serverless-http": "^3.1.1"
   }
 }
