--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is an open ai chat app for slack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
